# code_snippet_to_doc

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml  pre-commit.yml
code_snippet_to_doc/: __main__.py  snippet_processor.py
code_snippet_to_md/: __init__.py  __main__.py  snippet_processor.py
test/: test_snippet_processor.py
test/data/: repeated_pattern.c  sample.c  sample.py  test1.md.expected  test1.md.in  test2.md.expected  test2.md.in  test3.md.expected  test3.md.in  test4.md.expected  test4.md.in  test5.md.expected  test5.md.in  test6.md.expected  test6.md.in  test_rst1.rst.expected  test_rst1.rst.in  test_rst2.rst.expected  test_rst2.rst.in  test_rst3.rst.expected  test_rst3.rst.in
