[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "code_snippet_to_doc/_version.py"

[tool.setuptools.packages.find]
include = ["code_snippet_to_doc"]

[project]
name = "code_snippet_to_doc"
description = "Pre-commit hook to keep code snippets in Markdown and RST files in sync with source code"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Ivan Grokhotkov", email = "ivan@espressif.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/igrr/code_snippet_to_doc"
repository = "https://github.com/igrr/code_snippet_to_doc.git"
issues = "https://github.com/igrr/code_snippet_to_doc/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "commitizen"
]

[project.scripts]
code_snippet_to_doc = "code_snippet_to_doc.__main__:main"

[tool.black]
    line-length               = 120
    skip-string-normalization = true

[tool.ruff]
    line-length    = 120
    lint.select    = ['I', 'E', 'F', 'W']
    target-version = "py39"
    exclude = [ 'test/data/' ]
    force-exclude = true

[tool.mypy]
    disallow_incomplete_defs = false
    disallow_untyped_defs    = false
    ignore_missing_imports   = true
    python_version           = "3.9"
    warn_no_return           = true
    warn_return_any          = true

[tool.commitizen]
    version_provider = "scm"
    tag_format = "v$version"
    major_version_zero = true
    annotated_tag = true
    update_changelog_on_bump = true
    bump_message = "change: release v$new_version"
    version_files = ["README.md:rev: v"]
